--- a/demo2/src/main/resources/templates/index.html
+++ b/demo2/src/main/resources/templates/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html>
+<html xmlns:th="http://www.thymeleaf.org">
   <head>
     <title>Hotels</title>
 
@@ -16,5 +16,6 @@
     <div id="main">
       <div id="app"></div>
     </div>
+    <script src="static/js/main.js"></script>
   </body>
 </html>
